<resources xmlns:color="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Otomotives</string>
    <string name="spinner_no_default_hint"></string>
    <string name="hint_cari_part">CARI PART</string>
    <string name="GoogleMapsApi">AIzaSyD9lPBFebmjZWgS6PpNGnHej2Umu3migII</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="discount">
        <item>LAYANAN</item>

    </string-array>
    <string-array name="pekerjaan">
        <item>MAHASISWA</item>
        <item>OJOL</item>
        <item>PNS</item>

    </string-array>
    <string name="kategori_part">Kategori Part</string>
    <string name="kategori_part_uppercase">KATEGORI PART</string>
    <string name="hapus_uppercase">HAPUS</string>
    <string name="simpan_uppercase">SIMPAN</string>
    <string name="penggunaan_uppercase">PENGGUNAAN</string>
    <string name="lanjut_uppercase">LANJUT</string>
    <string name="jumlah_uppercase">JUMLAH</string>
    <string name="upah_minimum_kota_uppercase">UPAH MINIMUM KOTA</string>
    <string name="nama_bengkel_uppercase">NAMA BENGKEL</string>
    <string name="nama_badan_usaha_uppercase">NAMA BADAN USAHA</string>
    <string name="alamat_uppercase">ALAMAT</string>
    <string name="kota_kabupaten_uppercase">KOTA / KABUPATEN</string>
    <string name="nib_uppercase">NIB</string>
    <string name="nama_principial_uppercase">NAMA PRINCIPAL</string>
    <string name="no_ponselmsg_uupercase">NO. PONSEL MESSAGE</string>
    <string name="no_telp_uupercase">NO. TELP</string>
    <string name="npwp_uppercase">NPWP</string>
    <string name="nama_jaringan_uppercase">NAMA JARINGAN</string>
    <string name="jenis_kendaraan_uppercase">JENIS KENDARAAN</string>
    <string name="bidang_usaha_uppercase">BIDANG USAHA</string>
    <string name="jumlah_user_uppercase">JUMLAH USER</string>
    <string name="fasilitas_pelanggan_uppercase">FASILITAS PELANGGAN *</string>
    <string name="merk_lkk_ippercase">MERK LKK WAJIB</string>
    <string name="booking_uppercase">BOOKING</string>
    <string name="layanan_tambahan_uppercase">LAYANAN TAMBAHAN</string>
    <string name="luarbengkel_uppercase">LUAR BENGKEL</string>
    <string name="layanan_uppercase">LAYANAN</string>
    <string name="home">HOME</string>
    <string name="jemput">JEMPUT</string>
    <string name="emergency">EMERGENCY</string>
    <string name="kapasitas_simpan">KAPASITAS SIMPAN</string>
    <string-array name="tipe_schedule">
        <item>--PILIH--</item>
        <item>OPERASIONAL</item>
        <item>LAYANAN BOOKING</item>
        <item>LAYANAN HOME SERVICES</item>
        <item>LAYANAN EMERGENCY</item>
    </string-array>
    <string name="senin_jumat">SENIN - JUMAT</string>
    <string name="jumat">JUMAT</string>
    <string name="sabtu">SABTU</string>
    <string name="libur">LIBUR</string>
    <string name="minggu">MINGGU</string>
    <string name="format_jam">HH:MM</string>
    <string name="tanggal">Tanggal</string>
    <string name="no_polisi">No. Polisi</string>
    <string-array name="layanan">
        <item>SERVIS LENGKAP</item>

    </string-array>
    <string name="no_ponsel">No. Ponsel</string>
    <string name="foto_part">FOTO PART</string>
    <string name="foto_ktp">FOTO KTP</string>
    <string name="foto_stnk">FOTO STNK</string>
    <string name="verifikasi_info">
        otomotives.com akan memvalidasi No. ponsel Anda dengan OTP melalui Whatsapp. Registrasi hanya akan dilanjutkan untuk No. ponsel yang valid.
    </string>
    <string name="verifikasi_info2">
        Anda adalah pemilik atau pihak yang dapat mewakli bengkel secara hukum
    </string>
    <string name="nilai_unik_keterangan">
        Jangan melakukan pembayaran setelah batas Waktu Nilai Unik terlewati
    </string>
    <string name="mekanik">Mekanik</string>
    <string name="harga">Harga</string>
    <string name="status_uppercase">STATUS</string>
    <string name="nama_part">Nama Part</string>
    <string name="no_part">No. Part</string>
    <string name="jumlah_jumlah">Jumlah</string>
    <string name="no_polisi_uppercase">NO. POLISI</string>
    <string name="pelanggan_uppercase">PELANGGAN</string>
    <string name="mekanik_uppercase">MEKANIK</string>
    <string name="jasa_dan_part">JASA &amp; PART</string>
    <string name="setuju_dengan_syarat_dan_ketentuan_bengkel">SETUJU DENGAN SYARAT DAN KETENTUAN BENGKEL</string>
    <string name="stnk_di_terima">STNK DI TERIMA</string>
    <string name="tanggal_jam">Tanggal / Jam</string>
    <string name="user">User</string>
    <string name="nama_pelanggan">Nama Pelanggan</string>
    <string name="select_location"> Pilih Lokasi </string>
    <string name="keterangan_uppercase">KETERANGAN</string>
    <string name="aktivitas_uppercase">AKTIVITAS</string>
    <string name="hh_jj_mm">HH:JJ:MM</string>
    <string name="dp_bengkel">DP BENGKEL</string>
    <string name="no_antrian">NO. ANTRIAN</string>
    <string name="keterangan_batal">KETERANGAN BATAL</string>
    <string name="keterangan_message">KETERANGAN / MESSAGE</string>
    <string name="nama_mekanik">Nama Mekanik</string>
    <string name="tanggal_checkin">Tanggal Checkin</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="rp_total_biaya">Rp. Total Biaya</string>
    <string name="keterangan_tambahan">KETERANGAN TAMBAHAN</string>
    <string name="total_biaya_uppercase">TOTAL BIAYA</string>
    <string name="discount_lain">DISCOUNT LAIN</string>
    <string name="net_transaksi">NET TRANSAKSI</string>
    <string name="total_transaksi_uppercase">TOTAL TRANSAKSI</string>
    <string name="total_transaksi">Total Transaksi</string>
    <string name="nama_pelanggan_uppercase">NAMA PELANGGAN</string>
    <string name="transaksi">Transaksi</string>
    <string name="spot_disc">Spot Disc</string>
    <string name="nama_mekanik_uppercase">NAMA MEKANIK</string>
    <string name="no_folder">No. Folder</string>
    <string name="merk">Merk</string>
    <string name="jumlah_di_minta">Jumlah Di minta</string>
    <string name="kode_lokasi_tersedia">Kode Lokasi / Tersedia</string>
    <string name="stock">Stock</string>
    <string name="jumlah_permintaan">JUMLAH PERMINTAAN</string>
    <string name="stock_uppercase">STOCK</string>
    <string name="no_folder_uppercase">NO. FOLDER</string>
    <string name="jumlah_batal">JUMLAH BATAL</string>
    <string-array name="status">
        <item>--PILIH--</item>
        <item>AKTIF</item>
        <item>NON-AKTIF</item>
    </string-array>
    <string name="tanggal_uppercase">TANGGAL</string>
    <string name="tipe_supplier_uppercase">TIPE SUPPLIER</string>
    <string name="nama_supplier_uppercase">NAMA SUPPLIER</string>
    <string name="nama_ecommerce_uppercase">NAMA ECOMMERCE</string>
    <string name="estimasi_tiba_uppercase">ESTIMASI TIBA</string>
    <string name="discount_jasa_uppercase">DISCOUNT JASA</string>
    <string name="jenis_kendaraan_lowercase">Jenis Kendaraan</string>
    <string name="nn_n_dp_uppercase">%DP</string>
    <string name="sisa_biaya_uppercase">SISA BIAYA</string>
    <string name="merc_disc_rate_uppercase">MDR</string>
    <string name="rp">Rp</string>
    <string name="percent">%</string>
    <string name="tujuan_reminder_uppercase">TUJUAN REMINDER</string>
    <string name="pemilik_uppercase">PEMILIK</string>
    <string name="checkout_uppercase">CHECKOUT</string>
    <string name="print_bukti_uppercase">PRINT BUKTI</string>
    <string name="jam_home_uppercase">JAM HOME</string>
    <string name="point_layanan_uppercase">POINT LAYANAN</string>
    <string name="keluhan_uppercase">KELUHAN</string>
    <string name="nama_pelanggan_nama_usaha">Nama Pelanggan / Nama Usaha</string>
    <string name="sisa_waktu_uppercase">SISA WAKTU</string>
    <string name="nama_bank_uppercase">NAMA BANK</string>
    <string name="lkk_claim_uppercase">LKK CLAIM</string>
    <string name="tambah_part_uppercase">TAMBAH PART</string>
    <string name="catatan_mekanik_uppercase">CATATAN MEKANIK</string>
    <string name="tipe_jasa_uppercase">TIPE JASA</string>
    <string name="komisi_percent_uppercase">KOMISI %</string>
    <string name="total_komisi_percent">TOTAL KOMISI %</string>
    <string name="nama_group_part">Nama Group Part</string>
    <string name="aktivitas_layanan">Aktivitas Layanan</string>
    <string name="komisi">% Komisi</string>
    <string name="tipe_jasa">Tipe Jasa</string>
    <string name="nama_user">Nama User</string>
    <string name="total_bayar">Total Bayar</string>
    <string name="balance">Balance</string>
    <string name="nama_user_uppercase">NAMA USER</string>
    <string name="balance_uppercase">BALANCE</string>
    <string name="jumlah_bayar_uppercase">JUMLAH BAYAR</string>
    <string name="balance_akhir_uppercase">BALANCE AKHIR</string>
    <string name="nama_penerima_uppercase">NAMA PENERIMA</string>
    <string name="filter_uppercase">FILTER</string>
    <string name="history_uppercase">HISTORY</string>
    <string name="antrian_uppercase">ANTRIAN</string>
    <string name="konfirmasi_part_uppercase">KONFIRMASI PART</string>
    <string name="harga_part">Harga Part</string>
    <string name="batal_uppercase">BATAL</string>
    <string name="nama_layanan">Nama Layanan</string>
    <string name="km">KM</string>
    <string name="part_jasa_uppercase"><![CDATA[PART & JASA]]></string>
    <string name="part_uppercase">PART</string>
    <string name="default_rp_uppercase">Rp. 0</string>
    <string name="jual_part_uppercase">JUAL PART</string>
    <string name="discount_uppercase">DISCOUNT</string>
    <string name="lainnya_uppercase">LAINNYA</string>
    <string name="jasa_lain_uppercase">JASA LAIN</string>
    <string name="pendapatan_uppercase">PENDAPATAN</string>
    <string name="downpayment_uppercase">DOWNPAYMENT</string>
    <string name="income_uppercase">INCOME</string>
    <string name="kas_uppercase">KAS</string>
    <string name="bank_uppercase">BANK</string>
    <string name="piutang_uppercase">PIUTANG</string>
    <string name="collection_uppercase">COLLECTION</string>
    <string name="stock_part_uppercase">STOCK PART</string>
    <string name="hutang_uppercase">HUTANG</string>
    <string name="kasir_uppercase">KASIR</string>
    <string name="biaya_uppercase">BIAYA</string>
    <string name="hpp_part_uppercase">HPP PART</string>
    <string name="margin_upercase">MARGIN</string>
    <string name="periode_uppercase">PERIODE</string>
    <string name="tampilkan_uppercase">TAMPILKAN</string>
    <string name="dd_mm_yy_uppercase">DD/MM/YY</string>
    <string name="hari_uppercase">HARI</string>
    <string name="default_number">0</string>
    <string name="jasa_part_uppercase">JASA PART</string>
    <string name="min_stock">Min Stock</string>
    <string name="penjualan_30_hari_terakhir">Penjualan 30 Hari Terakhir</string>
    <string name="lokasi_part">Lokasi Part</string>
    <string name="tidak_menunggu_uppercase">TIDAK MENUNGGU</string>
    <string name="waktu_ambil_antar_uppercase">WAKTU AMBIL / ANTAR</string>
    <string name="pengambilan_uppercase">PENGAMBILAN</string>
    <string name="tittle_donasi">PELANGGAN SETUJU UNTUK MENDONASIKAN KEMBALIAN ?</string>
    <string name="tidak_uppercase">TIDAK</string>
    <string name="selesai_uppercase">SELESAI</string>
    <string name="aktifitas">Aktifitas</string>
    <string name="nama_kontak">Nama Kontak</string>
    <string name="tanggal_outsource">Tanggal Outsource</string>
    <string name="supplier">Supplier</string>
    <string name="kelompok_part">Kelompok Part</string>
    <string name="harga_jasa">Harga Jasa</string>
    <string name="nama_bengkel">Nama Bengkel</string>
    <string name="tanggal_aktif">Tanggal Aktif</string>
    <string name="jumlah_fee">Jumlah Fee</string>
    <string name="jumlah_bonus">Jumlah Bonus</string>
    <string name="tanggal_transfer">Tanggal Transfer</string>
    <string name="harga_part_net">Harga Part Net</string>
</resources>