<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="7dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="7dp"
    android:layout_marginBottom="4dp"
    android:padding="10dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="2dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:stretchColumns="*">

        <TableRow>

            <TextView
                android:id="@+id/tv_nopol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/no_polisi"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/status"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textSize="12sp" />

        </TableRow>

        <TableRow android:layout_marginTop="@dimen/paddingSmall">

            <TextView
                android:id="@+id/tv_namaPart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/nama_part"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textSize="12sp" />

        </TableRow>

        <TableRow android:layout_marginTop="@dimen/paddingSmall">

            <TextView
                android:id="@+id/tv_noPart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/no_part"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_merk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/merk"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textSize="12sp" />


        </TableRow>

        <TableRow android:layout_marginTop="@dimen/paddingSmall">

            <TextView
                android:id="@+id/tv_jumlah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/jumlah_jumlah"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_harga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/harga"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textSize="12sp" />

        </TableRow>

    </TableLayout>

</android.support.v7.widget.CardView>