<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="7dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="7dp"
    android:layout_marginBottom="4dp"
    android:layout_weight="5"
    android:padding="10dp"
    app:cardElevation="2dp"
    app:cardCornerRadius="7dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:stretchColumns="*"
        android:padding="10dp">

        <TableRow>

            <TextView
                android:id="@+id/tv_nama_kontak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_kontak"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textSize="12sp"
                android:textColor="@color/grey_800"/>

            <TextView
                android:id="@+id/tv_no_ponsel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_ponsel"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textSize="12sp"
                android:textColor="@color/grey_800"
                android:layout_gravity="end"/>


        </TableRow>

        <TableRow android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/tv_nama_bengkel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_bengkel"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textSize="12sp"
                android:textColor="@color/grey_800"/>

        </TableRow>

        <TableRow android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/tv_tgl_aktif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_aktif"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textSize="12sp"
                android:textColor="@color/grey_800" />

            <TextView
                android:id="@+id/tv_jumlah_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jumlah_fee"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textSize="12sp"
                android:textColor="@color/grey_800"
                android:layout_gravity="end"/>


        </TableRow>

        <TableRow android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/tv_jumlah_bonus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jumlah_bonus"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textSize="12sp"
                android:textColor="@color/grey_800"/>

            <TextView
                android:id="@+id/tv_tgl_transfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_transfer"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textSize="12sp"
                android:textColor="@color/grey_800"
                android:layout_gravity="end"/>

        </TableRow>

    </TableLayout>

</android.support.v7.widget.CardView>