<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="7dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="7dp"
    android:layout_marginBottom="4dp"
    android:layout_weight="5"
    android:padding="10dp"
    app:cardElevation="2dp"
    app:cardCornerRadius="7dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="15dp"
            android:stretchColumns="*">

            <TableRow>

                <TextView
                    android:id="@+id/tv_tgl_outsource"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tanggal_outsource"
                    android:textSize="12sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_gravity="start"/>

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textSize="12sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_gravity="end"/>


            </TableRow>

            <TableRow android:layout_marginTop="@dimen/spacing_medium">

                <TextView
                    android:id="@+id/tv_nopol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_polisi"
                    android:textSize="12sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_gravity="start"/>

                <TextView
                    android:id="@+id/tv_supplier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/supplier"
                    android:textSize="12sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_gravity="end"/>

            </TableRow>

            <TableRow android:layout_marginTop="@dimen/spacing_medium">

                <TextView
                    android:id="@+id/tv_kelompok_part"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kelompok_part"
                    android:textSize="12sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_gravity="start"/>

            </TableRow>

            <TableRow android:layout_marginTop="@dimen/spacing_medium">

                <TextView
                    android:id="@+id/tv_aktivitas_jasa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aktifitas"
                    android:textSize="12sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_gravity="start"/>

            </TableRow>

            <TableRow android:layout_marginTop="@dimen/spacing_medium">

                <TextView
                    android:id="@+id/tv_harga_jasa_lain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/harga_jasa"
                    android:textSize="12sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_gravity="start"/>

                <TextView
                    android:id="@+id/tv_biaya"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rp_total_biaya"
                    android:textSize="12sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_gravity="end"/>

            </TableRow>

        </TableLayout>

    </FrameLayout>

</android.support.v7.widget.CardView>