<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/box_shadow">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/konfirmasi_part_uppercase"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:padding="10dp"
        android:background="@drawable/box_shadow"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/tv_nama_part"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_part"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:padding="3dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/line_white"
            android:layout_marginTop="2dp"/>

        <TextView
            android:id="@+id/tv_no_part"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_part"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:padding="3dp"
            android:textColor="@android:color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/line_white"/>


        <TextView
            android:id="@+id/tv_harga_part"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harga_part"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:padding="3dp"
            android:textColor="@android:color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/line_white"/>

        <TextView
            android:id="@+id/tv_jumlah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jumlah_jumlah"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:padding="3dp"
            android:textColor="@android:color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/line_white"/>

        <TextView
            android:id="@+id/tv_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discount"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:padding="3dp"
            android:textColor="@android:color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/line_white"/>

        <TextView
            android:id="@+id/tv_harga_net"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harga_part_net"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:padding="3dp"
            android:textColor="@android:color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/line_white"/>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ENTRY DATA SUDAH LENGKAP / BENAR ?"
        android:textAlignment="center"
        android:textSize="13sp"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:background="@drawable/box_shadow" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_batal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_rounded_accent"
            android:text="@string/batal_uppercase"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_simpan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_rounded_accent"
            android:textColor="@android:color/white"
            android:text="@string/simpan_uppercase" />

    </RelativeLayout>


</LinearLayout>